--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -495,44 +495,44 @@ workflows:
   default:
     jobs:
     
-      # - backend_build
-      # - frontend_build
+      - backend_build
+      - frontend_build
       
-      # - backend_tests:
-      #     requires: 
-      #       - backend_build
-      # - frontend_tests:
-      #     requires: 
-      #       - frontend_build
+      - backend_tests:
+          requires: 
+            - backend_build
+      - frontend_tests:
+          requires: 
+            - frontend_build
 
-      # - audit-backend:
-      #     requires:
-      #       - backend_tests
-      # - audit-frontend:
-      #     requires:
-      #       - frontend_tests
+      - audit-backend:
+          requires:
+            - backend_tests
+      - audit-frontend:
+          requires:
+            - frontend_tests
 
-      # - deploy-infrastructure:
-      #     requires:
-      #     #  - audit-backend
-      #     #  - audit-frontend
-      #     filters:
-      #       branches:
-      #         only: master
-      # - configure-infrastructure:
-      #     requires:
-      #       - deploy-infrastructure
+      - deploy-infrastructure:
+          requires:
+          #  - audit-backend
+          #  - audit-frontend
+          filters:
+            branches:
+              only: master
+      - configure-infrastructure:
+          requires:
+            - deploy-infrastructure
 
-      # - run-migrations:
-      #     requires:
-      #       - configure-infrastructure
+      - run-migrations:
+          requires:
+            - configure-infrastructure
 
-      # - deploy-backend:
-      #     requires:
-      #       - run-migrations
-      # - deploy-frontend:
-      #     requires:
-      #       - deploy-backend
+      - deploy-backend:
+          requires:
+            - run-migrations
+      - deploy-frontend:
+          requires:
+            - deploy-backend
           
       # - smoke-test:
       #     requires: 
@@ -548,13 +548,3 @@ workflows:
       # - promote-to-production:
       #     requires:
       #       - smoke-test
-      
-
-      
-
-      
-
-
-
-             
-
