--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -498,19 +498,19 @@ workflows:
       - backend_build
       - frontend_build
       
-      - backend_tests:
-          requires: 
-            - backend_build
-      - frontend_tests:
-          requires: 
-            - frontend_build
+      # - backend_tests:
+      #     requires: 
+      #       - backend_build
+      # - frontend_tests:
+      #     requires: 
+      #       - frontend_build
 
-      - audit-backend:
-          requires:
-            - backend_tests
-      - audit-frontend:
-          requires:
-            - frontend_tests
+      # - audit-backend:
+      #     requires:
+      #       - backend_tests
+      # - audit-frontend:
+      #     requires:
+      #       - frontend_tests
 
       - deploy-infrastructure:
           requires:
